--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -34,7 +34,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <a class="dropdown-item button" href="#" id="ping-ip">Ping IP</a>
+              <a class="dropdown-item btn" href="#" role="button" id="ping-ip">Ping IP</a>
               <a class="dropdown-item" href="#" id="scan-ports">Scan Ports</a>
             </div>
           </li>
