--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -49,12 +49,12 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <a class="dropdown-item" href="#">Columns</a>
-              <a class="dropdown-item" href="#">Bars</a>
-              <a class="dropdown-item" href="#">Scatter</a>
-              <a class="dropdown-item" href="#">Pie</a>
-              <a class="dropdown-item" href="#">Donut</a>
-              <a class="dropdown-item" href="#">Timeline</a>
+              <a class="dropdown-item" href="#" id="column-chart">Columns</a>
+              <a class="dropdown-item" href="#" id="bar-chart">Bars</a>
+              <a class="dropdown-item" href="#" id="scatter-chart">Scatter</a>
+              <a class="dropdown-item" href="#" id="pie-chart">Pie</a>
+              <a class="dropdown-item" href="#" id="donut-chart">Donut</a>
+              <a class="dropdown-item" href="#" id="timeline">Timeline</a>
             </div>
           </li>
           <!-- End of CHARTS -->
