--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -55,7 +55,7 @@
                     <input type="checkbox" aria-label="Checkbox for following Bar-Chart selection">
                   </div>
                 </div>
-                <a class="dropdown-item" href="#" id="column-chart">Columns</a>
+                <input type="text" class="dropdown-item form control" href="#" id="column-chart">Columns</a>
               </div>
               <a class="dropdown-item" href="#" id="bar-chart">Bars</a>
               <a class="dropdown-item" href="#" id="scatter-chart">Scatter</a>
