--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -49,13 +49,13 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <div class="input-group">
+              <div class=" dropdown-item input-group">
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <input type="checkbox" aria-label="Checkbox for following Bar-Chart selection">
                   </div>
                 </div>
-                <input type="text" class="dropdown-item form control" href="#" id="column-chart">Columns</a>
+                <input type="text" class="form control" href="#" id="column-chart">Columns</a>
               </div>
               <a class="dropdown-item" href="#" id="bar-chart">Bars</a>
               <a class="dropdown-item" href="#" id="scatter-chart">Scatter</a>
