--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -50,7 +50,7 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
               <div class=" dropdown-item">
-                <div class="input-group">
+                <div class="input-group display-inline">
                   <div class="input-group-prepend">
                     <div class="input-group-text">
                       <input type="checkbox" aria-label="Checkbox for following Bar-Chart selection">
