--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -49,7 +49,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <div class=" dropdown-item">
+              <div class="row dropdown-item">
                 <div class="input-group display-inline">
                   <div class="input-group-prepend">
                     <div class="input-group-text">
