--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -43,22 +43,19 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Internal</a>
           </li>
-
           
           <!-- CHART Type .. -->  
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <div class="row dropdown-item">
-                <div class="input-group display-inline">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following Bar-Chart selection">
-                    </div>
-                  </div>
-                  <input type="text" class="form control" href="#" id="column-chart">Columns</a>
+              
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="defaultUnchecked">
+                  <label class="custom-control-label" for="defaultUnchecked">Columns</label>
                 </div>
               </div>
+              
               <a class="dropdown-item" href="#" id="bar-chart">Bars</a>
               <a class="dropdown-item" href="#" id="scatter-chart">Scatter</a>
               <a class="dropdown-item" href="#" id="pie-chart">Pie</a>
