--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -51,11 +51,11 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultUnchecked">
-                  <label class="custom-control-label" for="defaultUnchecked">Columns</label>
+                  <input type="radio" class="custom-control-input" id="columnChart" value="column-chart">
+                  <label class="custom-control-label text-primary" for="columnChart">Columns</label>
                 </div>
               </div>
-              
+
               <a class="dropdown-item" href="#" id="bar-chart">Bars</a>
               <a class="dropdown-item" href="#" id="scatter-chart">Scatter</a>
               <a class="dropdown-item" href="#" id="pie-chart">Pie</a>
