--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -78,8 +78,19 @@
                 </div>
               </div>
 
-              <a class="dropdown-item" href="#" id="donut-chart">Donut</a>
-              <a class="dropdown-item" href="#" id="timeline">Timeline</a>
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="donut-chart" name="chart-type" value="donut-chart">
+                  <label class="custom-control-label text-warning" for="donut-chart">Donut</label>
+                </div>
+              </div>
+
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="timeline" name="chart-type" value="timeline">
+                  <label class="custom-control-label text-info" for="timeline">Timeline</label>
+                </div>
+              </div>
             </div>
           </li>
           <!-- End of CHARTS -->
