--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -51,7 +51,7 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="column-chart" name="chart-type" value="column-chart">
+                  <input type="radio" class="custom-control-input" id="column-chart" name="chart-type" value="column-chart" checked>
                   <label class="custom-control-label text-primary" for="column-chart">Columns</label>
                 </div>
               </div>
