--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -34,8 +34,21 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <a class="dropdown-item btn" href="#" role="button" id="ping-ip">Ping IP</a>
-              <a class="dropdown-item" href="#" id="scan-ports">Scan Ports</a>
+                
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="ping-ip" name="external-monitoring" value="ping-ip" checked>
+                  <label class="custom-control-label bg-primary" for="ping-ip">Ping IP</label>
+                </div>
+              </div>
+    
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="scan-ports" name="external-monitoring" value="scan-ports" checked>
+                  <label class="custom-control-label bg-secondary" for="scan-ports">Ping IP</label>
+                </div>
+              </div>
+                <a class="dropdown-item" href="#" id="scan-ports">Scan Ports</a>
             </div>
           </li>
           <!-- End of EXTERNAL -->
