--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -38,17 +38,16 @@
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
                   <input type="radio" class="custom-control-input" id="ping-ip" name="external-monitoring" value="ping-ip" checked>
-                  <label class="custom-control-label bg-primary" for="ping-ip">Ping IP</label>
+                  <label class="custom-control-label text-primary" for="ping-ip">Ping IP</label>
                 </div>
               </div>
     
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
                   <input type="radio" class="custom-control-input" id="scan-ports" name="external-monitoring" value="scan-ports" checked>
-                  <label class="custom-control-label bg-secondary" for="scan-ports">Ping IP</label>
+                  <label class="custom-control-label text-success" for="scan-ports">Scan Ports</label>
                 </div>
               </div>
-                <a class="dropdown-item" href="#" id="scan-ports">Scan Ports</a>
             </div>
           </li>
           <!-- End of EXTERNAL -->
