--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -44,7 +44,7 @@
     
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="scan-ports" name="external-monitoring" value="scan-ports" checked>
+                  <input type="radio" class="custom-control-input" id="scan-ports" name="external-monitoring" value="scan-ports">
                   <label class="custom-control-label text-success" for="scan-ports">Scan Ports</label>
                 </div>
               </div>
