--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -138,10 +138,23 @@
   
               <a class="dropdown-item" href="#">Three Hours</a>
               <a class="dropdown-item" href="#">Six Hours</a>
-              <a class="dropdown-item" href="#">One Day</a>
+              
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="one-day" name="time-range" value="one-day">
+                  <label class="custom-control-label text-danger" for="one-day">One Day</label>
+                </div>
+              </div>
+    
               <a class="dropdown-item" href="#">Five Days</a>
               <a class="dropdown-item" href="#">Ten Days</a>
-              <a class="dropdown-item" href="#">Last Month</a>
+              
+              <div class="dropdown-item">
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="last-month" name="time-range" value="last-month">
+                  <label class="custom-control-label text-warning" for="last-month">Last Month</label>
+                </div>
+              </div>
             </div>
           </li>
           <!-- End of TIMEs -->
