--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -192,6 +192,17 @@
         </div>
       </div>
     
+      <!-- 3 Columns Structure -->
+      <div class="container">
+        <!-- Row of Results -->
+        <div class="row">
+          <!-- First Column : The Reports Configuration -->
+          <div class="col-md-4">
+            <h2>Configuration</h2>
+            <p>End-user selected the following configuration for reporting vlab performance data.</p>
+          </div>
+        </div>
+      </div>
     </main>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
