--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -199,7 +199,8 @@
           <!-- First Column : The Reports Configuration -->
           <div class="col-md-4">
             <h2>Configuration</h2>
-            <p>End-user selected the following configuration for reporting vlab performance data.</p>
+            <p>End-user selected the following configuration for displaying vlab performance data.</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More &raquo;</a></p>
           </div>
         </div>
       </div>
