--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -200,6 +200,11 @@
           <div class="col-md-4">
             <h2>Configuration</h2>
             <p>End-user selected the following configuration for displaying vlab performance data.</p>
+            
+            <!-- Configuration Table -->
+            <div class="table-responsive">
+              
+            </div>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More &raquo;</a></p>
           </div>
         </div>
