--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -203,7 +203,13 @@
             
             <!-- Configuration Table -->
             <div class="table-responsive">
-              
+              <tbody>
+                <tr>
+                  <!-- Monitoring Type -->
+                  <td>Monitoring: </td>
+                  <td></td>
+                </tr>
+              </tbody>
             </div>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More &raquo;</a></p>
           </div>
