--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -202,11 +202,21 @@
             <p>End-user selected the following configuration for displaying vlab performance data.</p>
             
             <!-- Configuration Table -->
-            <div class="table-responsive">
+            <div class="table-responsive mb-3">
               <tbody>
                 <tr>
                   <!-- Monitoring Type -->
                   <td>Monitoring: </td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <!-- Chart Type -->
+                  <td>Chart: </td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <!-- Time Range -->
+                  <td>Duration:</td>
                   <td></td>
                 </tr>
               </tbody>
