--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -203,6 +203,12 @@
             
             <!-- Configuration Table -->
             <div class="table-responsive mb-3">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
               <tbody>
                 <tr>
                   <!-- Monitoring Type -->
