--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -205,8 +205,8 @@
             <div class="table-responsive mb-3">
               <thead>
                 <tr>
-                  <th></th>
-                  <th></th>
+                  <th>#</th>
+                  <th>Value</th>
                 </tr>
               </thead>
               <tbody>
