--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -203,29 +203,31 @@
             
             <!-- Configuration Table -->
             <div class="table-responsive mb-3">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Value</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <!-- Monitoring Type -->
-                  <td>Monitoring: </td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <!-- Chart Type -->
-                  <td>Chart: </td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <!-- Time Range -->
-                  <td>Duration:</td>
-                  <td></td>
-                </tr>
-              </tbody>
+              <table class="table table-striped sable-sm">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Value</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <!-- Monitoring Type -->
+                    <td>Monitoring: </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <!-- Chart Type -->
+                    <td>Chart: </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <!-- Time Range -->
+                    <td>Duration:</td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More &raquo;</a></p>
           </div>
