--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -213,18 +213,18 @@
                 <tbody>
                   <tr>
                     <!-- Monitoring Type -->
-                    <td>Monitoring: </td>
-                    <td></td>
+                    <td>Monitoring:</td>
+                    <td role="momitoring"></td>
                   </tr>
                   <tr>
                     <!-- Chart Type -->
-                    <td>Chart: </td>
-                    <td></td>
+                    <td>Chart:</td>
+                    <td role="chart"></td>
                   </tr>
                   <tr>
                     <!-- Time Range -->
                     <td>Duration:</td>
-                    <td></td>
+                    <td role="duration"></td>
                   </tr>
                 </tbody>
               </table>
