--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -37,7 +37,7 @@
                 
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="ping-ip" name="external-monitoring" value="ping-ip" checked>
+                  <input type="radio" class="custom-control-input" id="ping-ip" name="external-monitoring" value="ping-ip">
                   <label class="custom-control-label text-primary" for="ping-ip">Ping IP</label>
                 </div>
               </div>
@@ -214,7 +214,7 @@
                   <tr>
                     <!-- Monitoring Type -->
                     <td>Monitoring:</td>
-                    <td role="momitoring"></td>
+                    <td role="monitoring"></td>
                   </tr>
                   <tr>
                     <!-- Chart Type -->
