--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -63,7 +63,7 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="column-chart" name="chart-type" value="column-chart" checked>
+                  <input type="radio" class="custom-control-input" id="column-chart" name="chart-type" value="column-chart">
                   <label class="custom-control-label text-primary" for="column-chart">Columns</label>
                 </div>
               </div>
@@ -122,7 +122,7 @@
               <div class="dropdown-item">
                 <!-- 15 minutes -->
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="15-mins" name="time-range" value="15-mins" checked>
+                  <input type="radio" class="custom-control-input" id="15-mins" name="time-range" value="15-mins">
                   <label class="custom-control-label text-primary" for="15-mins">15 Mins</label>
                 </div>
               </div>
