--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -63,14 +63,14 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="column-chart" name="chart-type" value="column-chart">
+                  <input type="radio" class="custom-control-input" id="column-chart" name="chart-type" value="Column">
                   <label class="custom-control-label text-primary" for="column-chart">Columns</label>
                 </div>
               </div>
 
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="bar-chart" name="chart-type" value="bar-chart">
+                  <input type="radio" class="custom-control-input" id="bar-chart" name="chart-type" value="Bar">
                   <label class="custom-control-label text-secondary" for="bar-chart">Bars</label>
                 </div>
               </div>
@@ -78,28 +78,28 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="scatter-chart" name="chart-type" value="scatter-chart">
+                  <input type="radio" class="custom-control-input" id="scatter-chart" name="chart-type" value="Scatter">
                   <label class="custom-control-label text-success" for="scatter-chart">Scatter</label>
                 </div>
               </div>
       
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="pie-chart" name="chart-type" value="pie-chart">
+                  <input type="radio" class="custom-control-input" id="pie-chart" name="chart-type" value="Pie">
                   <label class="custom-control-label text-danger" for="pie-chart">Pie</label>
                 </div>
               </div>
 
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="donut-chart" name="chart-type" value="donut-chart">
+                  <input type="radio" class="custom-control-input" id="donut-chart" name="chart-type" value="Donut">
                   <label class="custom-control-label text-warning" for="donut-chart">Donut</label>
                 </div>
               </div>
 
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="timeline" name="chart-type" value="timeline">
+                  <input type="radio" class="custom-control-input" id="timeline" name="chart-type" value="Timeline">
                   <label class="custom-control-label text-info" for="timeline">Timeline</label>
                 </div>
               </div>
@@ -122,7 +122,7 @@
               <div class="dropdown-item">
                 <!-- 15 minutes -->
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="15-mins" name="time-range" value="15-mins">
+                  <input type="radio" class="custom-control-input" id="15-mins" name="time-range" value="15 Mins">
                   <label class="custom-control-label text-primary" for="15-mins">15 Mins</label>
                 </div>
               </div>
@@ -131,7 +131,7 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="one-hour" name="time-range" value="one-hour">
+                  <input type="radio" class="custom-control-input" id="one-hour" name="time-range" value="One Hour">
                   <label class="custom-control-label text-success" for="one-hour">One Hour</label>
                 </div>
               </div>
@@ -141,7 +141,7 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="one-day" name="time-range" value="one-day">
+                  <input type="radio" class="custom-control-input" id="one-day" name="time-range" value="One Day">
                   <label class="custom-control-label text-danger" for="one-day">One Day</label>
                 </div>
               </div>
@@ -151,7 +151,7 @@
               
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="last-month" name="time-range" value="last-month">
+                  <input type="radio" class="custom-control-input" id="last-month" name="time-range" value="Last Month">
                   <label class="custom-control-label text-warning" for="last-month">Last Month</label>
                 </div>
               </div>
