--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -232,6 +232,7 @@
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More &raquo;</a></p>
           </div> <!-- End of Column -->
           <div class="col-md-4">
+            <!-- Second Column -->
             <h2>Heading</h2>
             <p>Let me spent some days there </p>
           </div>
