--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -152,7 +152,7 @@
               <div class="dropdown-item">
                 <div class="custom-control custom-radio">
                   <input type="radio" class="custom-control-input" id="last-month" name="time-range" value="Last Month">
-                  <label class="custom-control-label text-warning" for="last-month">Last Month</label>
+                  <label class="custom-control-label text-warning" for="last-month">Last Month/ All</label>
                 </div>
               </div>
             </div>
