--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -231,9 +231,9 @@
             </div>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn More &raquo;</a></p>
           </div> <!-- End of Column -->
-          <div class="col-md-4">
+          <div class="col-md-4" role="statistics">
             <!-- Second Column -->
-            <h2>Heading</h2>
+            <h2>Statistics Section</h2>
             <p>Let me spent some days there </p>
           </div>
         </div> <!-- End of Row-->
