--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -252,6 +252,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.2/d3.js"></script>
+
+    <!---->script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script-->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.js"></script>
   
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
