--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -253,8 +253,10 @@
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.2/d3.js"></script>
 
-    <!---->script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script-->
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.js"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script-->
+    <!--script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.js"></script-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/collect.js/4.6.4/collect.min.js"></script>
   
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
