--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -237,6 +237,9 @@
             <p>Let me spent some days there </p>
           </div>
         </div> <!-- End of Row-->
+        <div class="row">
+          <h1>Chart</h1>
+        </div>
       </div>
     </main>
   
