--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -237,7 +237,7 @@
             <p>Let me spent some days there </p>
           </div>
         </div> <!-- End of Row-->
-        <div class="row">
+        <div class="row" id="chart_div">
           <h1>Chart</h1>
         </div>
       </div>
