--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -237,8 +237,9 @@
             <p>Let me spent some days there </p>
           </div>
         </div> <!-- End of Row-->
-        <div class="row" id="chart_div">
+        <div class="row">
           <h1>Chart</h1>
+          <div id="chart_div"></div>
         </div>
       </div>
     </main>
