--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -271,6 +271,8 @@
       dateFns.isToday(new Date())
       //=> true
     </script>
+
+    <script src="voca.js" type="text/javascript"></script>
   
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
