--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -273,6 +273,9 @@
     </script>
 
     <script src="voca.js" type="text/javascript"></script>
+    <script>
+      console.log("type of v is: " + typeof v);
+    </script>
   
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
