--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -272,7 +272,7 @@
       //=> true
     </script>
 
-    <script src="voca.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.4.0/voca.js"></script>
     <script>
       console.log("type of v is: " + typeof v);
     </script>
