--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -278,6 +278,9 @@
       console.log("type of v is: " + typeof v);
     </script>
   
+    <script src="{{ url_for('static', filename='js/google_charts.mjs') }}" type="module">
+      //import { draw_timeline } from ''   
+    </script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
 </body>
