--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -280,6 +280,7 @@
   
     <script src="{{ url_for('static', filename='js/google_charts.mjs') }}" type="module">
       //import { draw_timeline } from ''   
+      draw_timeline();
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
