google charts support

--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -278,7 +278,7 @@
       console.log("type of v is: " + typeof v);
     </script>
   
-    <script src="{{ url_for('static', filename='js/google_charts.mjs') }}" type="module">
+    <script src="{{ url_for('static', filename='js/google_charts.js') }}" type="module">
       //import { draw_timeline } from ''   
       draw_timeline();
     </script>
