--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -278,8 +278,8 @@
       console.log("type of v is: " + typeof v);
     </script>
   
-    <script src="{{ url_for('static', filename='js/google_charts.js') }}" type="module">
-      //import { draw_timeline } from ''   
+    <script type="module">
+      import {draw_timeline} from src="{{ url_for('static', filename='js/google_charts.mjs') }}"    
       draw_timeline();
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
