google charts support

--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -279,7 +279,7 @@
     </script>
   
     <script type="module">
-      import {draw_timeline} from src="{{ url_for('static', filename='js/google_charts.mjs') }}"    
+      import {draw_timeline} from 'gui/js/google_charts.mjs';    
       draw_timeline();
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
