--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -282,7 +282,8 @@
       import {draw_timeline} from '/gui/js/google_charts.mjs';    
       draw_timeline();
     </script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
+    <!--script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script-->
+    <script type="module" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script-->
 
 </body>
 </html>
