--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -283,7 +283,7 @@
       draw_timeline();
     </script-->
     <script src="{{ url_for('static', filename='js/google_charts.mjs') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script-->
+    <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
 </body>
 </html>
